@@ -64,7 +64,8 @@ set_myself (HANDLE h)
       myself->exec_sendsig = NULL;
       myself->exec_dwProcessId = 0;
     }
-  else if (!myself->wr_proc_pipe)
+  else if (!child_proc_info)	/* child_proc_info is only set when this process
+				   was started by another cygwin process */
     myself->start_time = time (NULL); /* Register our starting time. */
   else if (cygheap->pid_handle)
     {
@@ -123,16 +124,6 @@ pinfo::maybe_set_exit_code_from_windows ()
 }
 
 void
-pinfo::zap_cwd ()
-{
-  extern char windows_system_directory[];
-  /* Move to an innocuous location to avoid a race with other processes
-     that may want to manipulate the current directory before this
-     process has completely exited.  */
-  SetCurrentDirectory (windows_system_directory);
-}
-
-void
 pinfo::exit (DWORD n)
 {
   minimal_printf ("winpid %d, exit %d", GetCurrentProcessId (), n);
@@ -148,7 +139,6 @@ pinfo::exit (DWORD n)
     }
 
   sigproc_terminate (ES_FINAL);
-  zap_cwd ();
 
   /* FIXME:  There is a potential race between an execed process and its
      parent here.  I hated to add a mutex just for that, though.  */
