@@ -1,3 +1,8 @@
+2006-12-18  Christopher Faylor  <me@cgf.cx>
+
+	* pinfo.cc (set_myself): Use a more foolproof method for determining if
+	the current process was started from another cygiwn process.
+
 2006-12-05  Corinna Vinschen  <corinna@vinschen.de>
 
 	* dcrt0.cc (get_cygwin_startup_info): Fix comment.
